syntax="proto3";

package vitepb;

message SnapshotBlock {
    bytes hash = 1;
    bytes prevHash = 2;
    bytes height = 3;
    bytes producer = 4;
    map<string, bytes> snapshot = 5;
    bytes signature = 6;
    uint64 timestamp = 7;
    bytes amount = 8;
}